--- a/application-docker.yml
+++ b/application-docker.yml
@@ -56,7 +56,7 @@ heimdall:
             - access_token
             - client_id
     redis:
-        host: 172.20.0.
+        host: 172.20.0.3
         port: 6379
         maxTotal: 128
         maxIdle: 128
