--- a/application-docker.yml
+++ b/application-docker.yml
@@ -36,7 +36,7 @@ heimdall:
         appName: HEIMDALL
         databaseName: heimdall
         portNumber: 5432
-        serverName: tsuru_default_postgres_heimdall
+        serverName: 172.18.0.9
         username: postgres
         password: 123456
         runLiquibase: true
@@ -56,7 +56,7 @@ heimdall:
             - access_token
             - client_id
     redis:
-        host: tsuru_default_redis_heimdall
+        host: 172.18.0.4
         port: 6379
         maxTotal: 128
         maxIdle: 128
@@ -97,7 +97,7 @@ spring:
             INDENT_OUTPUT: true
             WRITE-DATES-AS-TIMESTAMPS: false
     rabbitmq:
-        host: tsuru_default_rabbitmq_heimdall
+        host: 172.18.0.2
         port: 5672
         #virtual-host: dev
         requested-heartbeat: 10
