--- a/application-docker.yml
+++ b/application-docker.yml
@@ -35,15 +35,15 @@ heimdall:
         initializationFailFast: false
         appName: HEIMDALL
         databaseName: heimdall
-        portNumber: 5432
-        serverName: 10.42.0.31
-        username: postgres
-        password: 123456
+        portNumber: 5433
+        serverName: lb-postgres.postgres
+        username: xuxa
+        password: xuxa
         runLiquibase: true
         sendStringParametersAsUnicode: false
     mongo:
         enabled: false
-        serverName: tsuru_default_mongo_heimdall
+        serverName: lb-mongo
         #url: 
         port: 27017
         dataBase: logging
@@ -56,7 +56,7 @@ heimdall:
             - access_token
             - client_id
     redis:
-        host: 172.31.3.38
+        host: lb-redis
         port: 6379
         maxTotal: 128
         maxIdle: 128
@@ -97,7 +97,7 @@ spring:
             INDENT_OUTPUT: true
             WRITE-DATES-AS-TIMESTAMPS: false
     rabbitmq:
-        host: 172.31.3.38
+        host: lb-rabbit
         port: 5672
         #virtual-host: dev
         requested-heartbeat: 10
